@@ -1,0 +1,7 @@
+http://nibbles.it/debian/
+by Alessandro Polverini and Andrea Mottola, license same as open use logo
+
+To create polverini_b.rle:
+
+  1. convert polverini_b.png polverini_b.bmp
+  2. bmptoppm < polverini_b.bmp | ppmtolss16 #FBFDFA=7 > polverini_b.rle
