@@ -2,6 +2,8 @@ debian-installer (20040332) UNRELEASED; urgency=low
 
   * Joey Hess
     - Add copyright info for the manual to debian/copyright.
+    - Add logo by Alessandro Polverini and Andrea Mottola.
+      Not the default until the Debian version is corrected though.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 31 Mar 2004 16:43:13 -0500
 
